# elastic-dump-rust

./: .gitignore  Cargo.toml  README.md  dump.json
.github/workflows/: rust.yaml
src/: api.rs  cli.rs  errors.rs  es_dump.rs  lib.rs  main.rs  sign.rs  types.rs
