[package]
name = "elastic-dump-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sigv4 = "0.12.0"
clap = { version = "3.1.18", features = ["derive"] }
env_logger = "0.9.0"
http = "0.2.7"
log = "0.4.17"
reqwest = "0.11.10"
serde = {  version="1.0.137", features=["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.

[[bin]]
name = "elastic_dump_rust"
path = "src/main.rs"

[lib]
name = "elastic_dump_rust"
path = "src/lib.rs"